--- a/how-to-use-babel/package.json
+++ b/how-to-use-babel/package.json
@@ -14,6 +14,9 @@
     "@babel/core": "^7.14.3",
     "@babel/plugin-transform-arrow-functions": "^7.13.0",
     "@babel/plugin-transform-template-literals": "^7.13.0",
-    "@babel/preset-react": "^7.13.13"
+    "@babel/preset-react": "^7.13.13",
+    "babel-loader": "^8.2.2",
+    "webpack": "^5.37.1",
+    "webpack-cli": "^4.7.0"
   }
 }
