--- a/how-to-use-babel/beginner-babel/package.json
+++ b/how-to-use-babel/beginner-babel/package.json
@@ -4,6 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.5",
+    "file-loader": "^6.2.0",
+    "raw-loader": "^4.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "style-loader": "^2.0.0",
     "webpack": "^5.37.1",
     "webpack-cli": "^4.7.0"
   }
